Update headshots and bios (#7)

--- a/our-team.html
+++ b/our-team.html
@@ -400,11 +400,11 @@
                 </div>
 
                 <div class="col-lg-3 col-md-5 ">
-                    <div class="member" data-toggle="modal" data-target="#herram">
+                    <div class="member" data-toggle="modal" data-target="#heraam">
                         <!--<img src="img/team-2022/Yousef Al 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2022/Yousef Al 2.jpg';"
                         onmouseout="this.src='img/team-2022/Yousef Al 1.jpg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Heraa Muqri.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Heraa Muqri</h4>
@@ -1013,7 +1013,7 @@
                                 <span>Community Outreach Co-Director</span>
                                 <h5>Laboratory Medicine and Pathobiology, Immunology, Computer Science</h5>
                                 <div class="social">
-                                    <a href="mailto:outreach.events@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                                    <a href="mailto:outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
                                     <a href="http://www.linkedin.com/in/nicole-sun-11855b2010" target="_blank"><i
                                             class="fa fa-linkedin"></i></a>
                                 </div>
@@ -1669,8 +1669,7 @@
 
                 <div class="modal-body text-center">
                     <h1>Trisha Singh</h1>
-                    <a href="www.linkedin.com/in/trisha-singh19" target="_blank"><i
-                            class="fa fa-linkedin"></i></a>
+                    <a href="www.linkedin.com/in/trisha-singh19" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <p>Hi! I'm Trisha, a third-year student doing a double major in Cell and Molecular Biology and
                         Genome Biology with a minor in Immunology. In my free time, I enjoy watching movies and shows,
                         as well as exploring new places and engaging in thrilling activities. It is my first year on
@@ -2150,6 +2149,34 @@
         </div>
     </div>
 
+    <div class="modal fade" id="heraam" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Heraa Muqri</h1>
+                    <a href="https://www.linkedin.com/in/heraa-muqri/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Heraa, a second-year EngSci student who is a Director of Business Relations in the
+                        Finance team! I love reading, spending time with my family, and biking! I'm very interested in
+                        healthtech and using engineering to improve human health and encouraging other women in STEM. As
+                        a member of the WISE Finance team, I am excited to work with other WISE members and companies to
+                        get sponsors for WISE and make sure everyone has a great time!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <!-- <div class="modal fade" id="christinaw" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
@@ -2512,6 +2539,38 @@
                         try to find unique ways to create in my everyday life. I love the community and support that
                         WISE brings to the STEM community and I am so excited to bring the conference to life again this
                         year!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="nicoles" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Nicole Sun</h1>
+                    <a href="mailto:outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="www.linkedin.com/in/nicole-sun-11855b201" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Nicole, a second-year student pursuing a Pathobiology specialist and double minoring in
+                        Immunology and Computer science! In WISE, I am one of the Community Outreach Directors along
+                        with Charlene. In my free time, I love running and/or playing badminton with friends, listening
+                        to chill pop music, cooking new dishes, discovering new origami models, and taking care of my
+                        various house plants (I love then so much^^)! I have always been a strong believer that anyone
+                        can pursue STEM regardless of gender and background, so I'm here as a part of the Outreach team
+                        in WISE to help girls and trans/non-binary students to discover their passion for STEM related
+                        fields through the different workshops and events we host!</p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
