Update headshots and bios (#7)

--- a/our-team.html
+++ b/our-team.html
@@ -195,7 +195,7 @@
                         <!--<img src="img/team/Tiffanie Li 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team/Tiffanie Li 2.jpeg';"
                         onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Mehak Afzal.png" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Mehak Afzal</h4>
@@ -235,7 +235,7 @@
                         <!--<img src="img/team/Tiffanie Li 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team/Tiffanie Li 2.jpeg';"
                         onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Christina Wong.png" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content-long">
                                 <h4>Christina Wong</h4>
@@ -748,6 +748,26 @@
                 </div>
 
                 <div class="col-lg-3 col-md-5 ">
+                    <div class="member" data-toggle="modal" data-target="#lanlinh">
+                        <!-- <img src="img/team/Asma Surti 1.jpeg" class="img-fluid"
+                        onmouseover="this.src='img/team/Asma Surti 2.jpeg';"
+                        onmouseout="this.src='img/team/Asma Surti 1.jpeg';">-->
+                        <img src="img/color1.jpg" class="img-fluid">
+                        <div class="member-info">
+                            <div class="member-info-content-long">
+                                <h4>Lanlin He</h4>
+                                <span>PD Operations Director</span>
+                                <h5>Electrical Engineering</h5>
+                                <div class="social">
+                                    <a href="www.linkedin.com/in/lanlin-he-921279255" target="_blank"><i
+                                            class="fa fa-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#akritis">
                         <!-- <img src="img/team-2021/Sabrina Zhu 1.jpg" class="img-fluid"
                         onmouseover="this.src='img/team-2021/Sabrina Zhu 2.jpg';"
@@ -771,7 +791,7 @@
                 <div class="col-lg-3 col-md-5 ">
                     <div class="member" data-toggle="modal" data-target="#samanthah">
                         <!--<img src="img/favicon.jpg" class="img-fluid" alt="">-->
-                        <img src="img/color1.jpg" class="img-fluid">
+                        <img src="img/team-2023/Samantha Hossain.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Samantha Hossain</h4>
@@ -2177,7 +2197,37 @@
         </div>
     </div>
 
-    <!-- <div class="modal fade" id="christinaw" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="lanlinh" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <div class="modal-body text-center">
+                    <h1>Lanlin He</h1>
+                    <a href="mailto:pd.operations@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="www.linkedin.com/in/lanlin-he-921279255" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <p>Hey there! I'm Lanlin, juggling my second year in Electrical Engineering at U of T with being one
+                        of the PD-operational directors at WISE. You'll catch me putting together cool workshops and fun
+                        networking events that bring us closer to the big names in the industry. When I'm not in
+                        engineering mode, I'm all about dancing to the latest K-pop hits, getting lost in a good book,
+                        or chilling with a great movie. My goal in WISE is to make sure we're a welcoming bunch where
+                        everyone can discover and celebrate their love for science and engineering!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="christinaw" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
 
             <div class="modal-content">
@@ -2189,9 +2239,15 @@
 
                 <div class="modal-body text-center">
                     <h1>Christina Wong</h1>
-                    <a href="mailto:vp.pd@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/christina-wong-25000b1b7/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <p>Hi, I'm Christina! I'm currently pursuing a specialist in Pathobiology and a major in Global Health, where I enjoy studying both the biological and social aspects of health. When I'm not at my desk or in the lab, I'm usually jamming out to my favourite tunes. I'm also passionate about all things involving creativity and design! I'm very excited to work with our lovely WISE team in putting together impactful events and opportunities for professional development.</p>
+                    <a href="mailto:internal.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/christinanjwong/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi, I’m Christina! I’m currently a second-year MHSc student in the Translational Research Program
+                        who is passionate about making science come to life in an impactful way. I enjoy working at the
+                        intersection of scientific research, creative design thinking, and business strategy to drive
+                        innovative problem-solving in healthcare - there is so much to learn! This year, I’m excited to
+                        work on expanding our WISE alumni program with my awesome co-director, to expand and build a
+                        supportive community of women in STEM that extends both on- and off-campus. </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -2199,7 +2255,7 @@
 
             </div>
         </div>
-    </div>  -->
+    </div>
 
 
     <div class="modal fade" id="sabrinaz" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -2254,6 +2310,42 @@
                         summer and skating outdoors in the winter. As the VP of Professional Development, I’m super
                         excited to run some amazing recruitment events for you during the year and I hope to see you
                         there!</p>
+                    <div class="text-center">
+                        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="samanthah" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-avatar modal-lg">
+
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true" class="white-text">&times;</span>
+                    </button>
+                </div>
+
+                <!-- <div class="modal-header">
+                    <img src="img/speakers/kathryn-cropped.png" alt="avatar" class="rounded-circle img-responsive">
+                </div> -->
+
+                <div class="modal-body text-center">
+                    <h1>Samantha Hossain</h1>
+                    <a href="mailto:vp.marketing@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/samantha-hossain-133234247/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hello! My name is Samantha and I am an engineering science (2T6 + PEY) student intending to go
+                        into the ECE (or Robo) major! I am the industry mentorship director for this year along with
+                        Diba. Last year, I participated in a mentorship program as a mentee, and I was able to create an
+                        amazing bond with my mentor, and she gave me a lot of insight into the career field that I was
+                        interested in (back then I was interested in biomedical engineering, but I changed my mind). I
+                        really enjoyed the program which is why I decided to help out with industry mentorship and help
+                        other people create valuable bonds! </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
                     </div>
@@ -3274,12 +3366,17 @@
 
                 <div class="modal-body text-center">
                     <h1>Mehak Afzal</h1>
-                    <p>Hi, I am Mehak Afzal and I am in my 2nd Year Mechanical Engineering. I am a fun loving social
-                        person who loves to explore new places and try various cuisines. I also obviously enjoy netflix
-                        n chill with takeout Chinese or fried chicken, as well as working out, cycling and love to
-                        engage in deep philosophical conversations. Through WISE I am most excited to meet successful
-                        women from various backgrounds and get inspired by their journey to being a women in STEM! <br>
-                        Fun fact: I am the first person in my family to pursue a career in STEM!
+                    <a href="mailto:internal.outreach@wise.skule.ca"><i class="fa fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/mehak-afzal-3a95991b5/" target="_blank"><i
+                            class="fa fa-linkedin"></i></a>
+                    <p>Hi! I'm Mehak, I am in my third year of Mechanical Engineering with a focus on mechatronics and a
+                        minor in Business. I'm passionate about WISE because it allows me to inspire and empower women
+                        like myself to challenge the status quo, and make a meaningful difference in our community. As
+                        the external affairs director this year, I hope to create a more close knit WISE community as
+                        well as help bridge WISE to the World! Moreover, I enjoy playing tennis (though I'm still a
+                        rookie), watching K-dramas, sipping on boba, delving into philosophy, spending time in
+                        libraries, and indulging in plenty of coffee (it's a lifestyle). I'm incredibly eager to meet
+                        all of you, share our experiences, and create new memories together. See you soon!
                     </p>
                     <div class="text-center">
                         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
