--- a/opportunities.html
+++ b/opportunities.html
@@ -160,6 +160,25 @@
                     </table>
                 </div> -->
 
+                <button type="button" style="margin:10px;" class="collapsible">SDSS x Brave: Panel and Network</button>
+                <div class="content">
+                    <p>Introducing our <b>SDSS x Brave: Panel and Networking event on December 6th, 5-7pm!</b></p>
+                    <p>Reserve your spot here, only $5: <a href="https://www.zeffy.com/en-CA/ticketing/f7698cae-2d7e-48b5-a115-81c67c19a3bf">here!</a></p>
+                    <p>Tickets are limited to 1 per person. They are limited, so act fast! <b>The last day to buy tickets is December 3rd, 11:59 pm.</b></p>
+                    <p>Join us for an illuminating panel discussion featuring seasoned data science industry professionals from companies such as <b>Deloitte, Chubb, Loblaw Digital, Birch Hill Equity Partners, and Autodesk</b>. Look at the event page for more information about our speakers!</p>
+                    <p>Don’t miss out on this opportunity to tap into professional insights from our distinguished panel and gain insights into the latest challenges and innovations shaping our world. Refreshments will be served.</p>
+                    <p>If you have any particular questions to ask our panel speakers and would like to keep updated on event details via email, fill out the <a href="https://docs.google.com/forms/d/e/1FAIpQLScaLREMU6nG_kcwjmTJAs7eL36zXfDEIlEnrM8m7hQbug3rBQ/viewform">interest form</a>.</p>
+                    <p>You can also keep up on updates on the <a href="https://discord.gg/YDBwmDUTuM">SDSS Discord</a> and <a href="https://instagram.com/sdssuoft">SDSS Instagram</a>.</p>
+                    <p><b>Date, Time, and Location:</b> 700 University Ave (Intact Building), 9th floor December 6th, 5-7 pm</p>
+                    <p style="margin-bottom:0;"><b>Topics:</b></p>
+                    <ul>
+                        <li>The types of post-graduate careers in Data</li>
+                        <li>How to get internships and getting the most out of those internships</li>
+                        <li>Big companies vs small companies</li>
+                        <li>Key tools and accelerators to make you a top candidate</li>
+                    </ul>
+                </div>
+
                 <button type="button" style="margin:10px;" class="collapsible">Google Summer 2024 Internship Opportunities!</button>
                 <div class="content">
                     <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
@@ -205,9 +224,10 @@
                     </ul>
                 </div>
 
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">'What You Need to Know About Starting a Career in Sales' Hosted by Tommy Sumi from Jarvis Consulting Group!</button>
                 <div class="content">
-                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    img src="img/marketing/PwC.png" width="100%" height="650"> 
                     <p>Jarvis Consulting Group is hosting a virtual workshop on <b>'What You Need to Know About Starting a Career in Sales'</b> on Tuesday, November 14th, from 12p.m. to 1p.m.!</p>
                     <p>This virtual workshop will be hosted by Jarvis’ very own Lead Account Executive, Tommy Sumi! This opportunity will allow for students to gain valuable insight on careers in sales. Join us to learn essential strategies for successfully entering into a new sales role with confidence, drive, and grit!</p>
                     <p>This is a great opportunity to learn about sales as a career path if you're a student who may not be sure what you want to do after graduation. We'll talk about the traits well suited for jobs in sales, how to impress a sales hiring manager or leader, and how to succeed in a sales role. We hope to see you there!</p>
@@ -219,10 +239,11 @@
 
                     </ul>
                 </div>
-
+                -->
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">Roadmap to Zero Hunger: Agricultural Innovations for a Climate-Smart Future</button>
                 <div class="content">
-                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    
                     <p>Are you passionate about creating a sustainable future and want to connect with multidisciplinary leaders in the space? <a href="http://globalspark.world/">Global Spark</a> is hosting its Systems for Sustainability Forum (SSF) on November 18th 2023 focused on the topic of <b>“Roadmap to zero hunger: Agricultural innovations for a climate-smart future”</b></p>
                     <p><b>Date: November 18, 2023</b></p>
                     <p><b>Time: 11:00 am - 3:00 pm EST</b></p>
@@ -236,20 +257,24 @@
                     </ol>
                     <p><b>Register by November 10th for the chance to join in-person or participate in a small group discussion with our speakers!</b>: <a href="https://buff.ly/3tyOHWX">https://buff.ly/3tyOHWX</a></p>
                 </div>
+                -->
 
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">Mastercard Toronto Office Tour Nov 16th</button>
                 <div class="content">
-                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <img src="img/marketing/PwC.png" width="100%" height="650">
                     <p>Mastercard would like to invite UofT students to attend our Toronto Office Tour Event for prospective interns on November 16th from 5:30-7:30pm.</p>
                     <p style="margin-bottom:0;">Application Form:</p>
                     <ul>
                         <li>Application Form: <a href="https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG"></a>https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG</li>
                     </ul>
                 </div>
+                -->
 
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">Applications Open for Accelerate Her Future's Fellowship Circle!!</button>
                 <div class="content">
-                    <!-- img src="img/marketing/PwC.png" width="100%" height="650"> -->
+                    <img src="img/marketing/PwC.png" width="100%" height="650">
                     <p>Applications are now open for Accelerate Her FutureTM’s Fellowship Circle, a 10-week program for Black, Indigenous and women of colour students and recent grads (International students welcome to apply) residing in Canada. This holistic and tailored program provides Group Mentorship Circles, Career Learning Labs, and opportunities for networking and building authentic relationships with peers. Apply today! <b>Applications close November 20.</b></p>
                     <p>To check eligibility and apply: <a href="https://accelerateherfuture.com/for-individuals/fellowship-circle/">https://accelerateherfuture.com/for-individuals/fellowship-circle/</a></p>
                     <p style="margin-bottom:0;">Fellowship Circle Application Key Dates:</p>
@@ -259,8 +284,9 @@
                         <li>Fellowship Circle Winter Cohort will include a Career Readiness Bootcamp on January 20/21, 2024 and 10-weekly sessions every Thursday from January 25 - March 28, 2024, 7:00 - 9:00 pm EST.</li>
                     </ul>
                 </div>
+                -->
 
-                <button type="button" style="margin:10px;" class="collapsible">Women In Pharma Virtual Career Panel Discussion</button>
+                <!--<button type="button" style="margin:10px;" class="collapsible">Women In Pharma Virtual Career Panel Discussion</button>
                 <div class="content">
                     <p>Sanofi Canada is hosting their third of a three-part development workshop series for the Fall 2023 season, NA Sanofi Workshop Series: “Women In Pharma” virtual career panel discussion! The workshop will have topics that are particularly relevant to students. Additionally, we would welcome you to attend the session!</p>
                     <p style="margin-bottom:0;"><b>About the Workshop:</b> The Sanofi “Women In Pharma” virtual career panel discussion on Wednesday, November 15th (5:00pm-6:30pm) is an opportunity for students to gain insight into the pharmaceutical industry and learn from accomplished women who are working in various roles within Sanofi. The amazing panelists will offer valuable perspectives on areas such as:</p>
@@ -278,7 +304,7 @@
                     <p><b>Time:</b> 5:00 - 6:30 PM EST</p>
                     <p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gZ5wt">https://smrtr.io/gZ5wt</a></p>
 
-                </div>
+                </div>-->
 
                 <button type="button" style="margin:10px;" class="collapsible">Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto</button>
                 <div class="content">
@@ -294,18 +320,21 @@
                         application. Applicants to the PhD program are expected to have prior research experience, and a typical PhD applicant will have (or will be working toward) a research-based Master’s degree. Note that the MASc and PhD degree programs are fully funded. We appreciate your consideration, and we hope to see your application.</p>
                 </div>
 
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">Wet Lab Spaces for Health Science Startups</button>
                 <div class="content">
                     <p><b>November 14th | 2023 Pitch Perfect Competition</b></p>
                     <p>Join <b>Health Innovation Hub (H2i)</b> and <b>MaRS</b> on <b>Wednesday November 22nd</b> for an in-person event exploring how early-stage health science startups are navigating their wet lab space needs. This panel and networking event will cultivate conversation between entrepreneurs and wet lab space providers—with a unique panel featuring speakers from startups, labs, academia, hospitals, real estate, advocacy coalitions and more. Learn what is currently available, gain insight into navigating existing challenges, and join the important conversation of how we can collaborate to continue growing a local, thriving wet-based venture community. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/">https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/</a></b></p>
                 </div>
-
+                -->
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">2023 Pitch Perfect Competition</button>
                 <div class="content">
                     <p><b>November 22nd | Wet Lab Spaces for Health Science Startups</b></p>
                     <p><b>Pitch Perfect</b> is a Temerty Faculty of Medicine and Health Innovation Hub (H2i) initiative to celebrate and support student entrepreneurs working on health focused innovations. The event will showcase 6 student-based ventures who will have just 5-minutes to capture their innovative concept as they pitch to a panel of expert judges. 3 of the teams will win a $5000 Student Innovation Fellowship to help develop their project further. Join us in-person on <b>November 14th</b> for networking and interaction with the community! Food and refreshments will be provided. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/pitch-perfect-2023/">https://h2i.utoronto.ca/event/pitch-perfect-2023/</a></b></p>
                 </div>
-
+                -->
+                <!--
                 <button type="button" style="margin:10px;" class="collapsible">BMO In-Person Led Workshop - Let’s Solve Resume Mysteries</button>
                 <div class="content">
                     <p>Career Exploration & Education (CxED), Student Life invites you to attend the employer led <b>in-person</b> workshop - <b>Bank of Montreal (BMO)</b> - <i>"Let's Solve Resume Mysteries: Building Effective Resumes & Navigating ATS"</i>.</p>
@@ -325,7 +354,7 @@
                     <p><b>Questions:</b>  If you have any questions or require any accommodation, please email Career Exploration & Education at <a href="mailto: events@careers.utoronto.ca">events@careers.utoronto.ca</a></p>
                     <p>*The ELC Building is on the southeast corner of Beverley and College. The building entrance is on Beverley - 255 Beverley St. Take the elevator to the 3rd floor, turn right and walk to the end of the hall. Walk through the doors, turn right and you'll see the open conference room straight ahead.</p>
                 </div>
-
+                -->
 
                 <!-- <button type="button" class="collapsible">Performance Improvement Consultant (Full Time)</button>
                 <div class="content">
@@ -352,7 +381,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: November 9, 2023</i></p>
+                <p class="align"><i>Last updated: November 28, 2023</i></p>
             </div>     
         </section>
 	</main>
