--- a/opportunities.html
+++ b/opportunities.html
@@ -169,6 +169,24 @@
                     <p><b>All are welcome to join: students, faculty, alumni, founders, aspiring innovators & members of the H2i community!</b></p>
                     <p>Reserve your spot <a href="https://h2i.utoronto.ca/event/femstem-2024-kickoff-event-panel/">here!</a></p>
                 </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">University Consulting Group is recruiting student consultants for Winter 2024</button>
+                <div class="content">
+                    <p>Exciting news! University Consulting Group (UCG) is gearing up for our Winter Term Engagement and is inviting Canadian university and college students and postdocs from all backgrounds to join our volunteer case teams.</p>
+                    <p style="margin-bottom:0;">UCG, a non-profit student-run organization, offers a <b>remote opportunity</b> to tackle real-world challenges for non-profits. As a Consultant, you will embark on a 10-week journey during which you will:</p>
+                    <ol>
+                        <li>Cultivate valuable teamwork skills alongside like-minded peers.</li>
+                        <li>Collaborate closely with non-profit clients to tackle their distinctive challenges.</li>
+                        <li>Establish connections and receive guidance from industry-leading consultants.</li>
+                        <li>Benefit from hands-on consultancy training led by seasoned experts.</li>
+                    </ol>
+                    <ul>
+                        <li>The engagement will run from February 3rd to April and require a 5–10 hour time commitment per week.</li>
+                        <li>Join our info session to learn more from alumni who launched from UCG into top consulting firms on the week of <b>January 10th, 2024</b> <a href="https://docs.google.com/forms/d/e/1FAIpQLScgaGtHlWj_sGrz4lqHZdcV6lEOT0yOu5SvGPt2QRFivumUZA/viewform">[Register Here]</a></li>
+                        <li>The application deadline is <b>January 15th, 11:59 PM EST,</b> but interviews will be scheduled on a rolling basis, so don’t wait! <a href="https://docs.google.com/forms/d/e/1FAIpQLScJ0roKy4CQ6TroLu9k-QNbA_03uvNCVywoZoRVH5gOHqDPjg/viewform">[Apply Here]</a></li>
+                        <li>Ready for this transformative journey with UCG? Reach us at <a href="mailto: info@universityconsultinggroup.com">info@universityconsultinggroup.com</a> for inquiries or check out our website: <a href="https://www.universityconsultinggroup.com/">https://www.universityconsultinggroup.com/</a></li>
+                    </ul>
+                </div>
                 <!--
                 <button type="button" style="margin:10px;" class="collapsible">SDSS x Brave: Panel and Network</button>
                 <div class="content">
@@ -251,71 +269,6 @@
                     </ul>
                 </div>
                 -->
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">Roadmap to Zero Hunger: Agricultural Innovations for a Climate-Smart Future</button>
-                <div class="content">
-                    
-                    <p>Are you passionate about creating a sustainable future and want to connect with multidisciplinary leaders in the space? <a href="http://globalspark.world/">Global Spark</a> is hosting its Systems for Sustainability Forum (SSF) on November 18th 2023 focused on the topic of <b>“Roadmap to zero hunger: Agricultural innovations for a climate-smart future”</b></p>
-                    <p><b>Date: November 18, 2023</b></p>
-                    <p><b>Time: 11:00 am - 3:00 pm EST</b></p>
-                    <p><b>Location: Virtual and in-person at the BCG office in Toronto (81 Bay St, Toronto)</b></p>
-                    <p style="margin-bottom:0;"><b>Event Highlights:</b></p>
-                    <ol>
-                        <li><b>Thought Leader Panel</b> (11AM - 12:30PM EST) Join global experts to discuss innovative solutions for food security and equitable value chains</li>
-                        <li><b>Small Group Discussions with Panelists</b> (12:30PM - 1:00PM EST) Engage in an intimate discussion with one of our panelists</li>
-                        <li><b>Community Workshops</b>(1:30PM - 3PM EST): Engage with leading organizations to discover tangible climate and food systems solutions</li>
-                        <li><b>Networking Opportunities:</b> Connect with fellow young professionals, industry experts, and potential collaborators who share your passion for sustainability</li>
-                    </ol>
-                    <p><b>Register by November 10th for the chance to join in-person or participate in a small group discussion with our speakers!</b>: <a href="https://buff.ly/3tyOHWX">https://buff.ly/3tyOHWX</a></p>
-                </div>
-                -->
-
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">Mastercard Toronto Office Tour Nov 16th</button>
-                <div class="content">
-                    <img src="img/marketing/PwC.png" width="100%" height="650">
-                    <p>Mastercard would like to invite UofT students to attend our Toronto Office Tour Event for prospective interns on November 16th from 5:30-7:30pm.</p>
-                    <p style="margin-bottom:0;">Application Form:</p>
-                    <ul>
-                        <li>Application Form: <a href="https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG"></a>https://form.mastercard.com/jfe/form/SV_3vG5K2q8V1zgvgG</li>
-                    </ul>
-                </div>
-                -->
-
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">Applications Open for Accelerate Her Future's Fellowship Circle!!</button>
-                <div class="content">
-                    <img src="img/marketing/PwC.png" width="100%" height="650">
-                    <p>Applications are now open for Accelerate Her FutureTM’s Fellowship Circle, a 10-week program for Black, Indigenous and women of colour students and recent grads (International students welcome to apply) residing in Canada. This holistic and tailored program provides Group Mentorship Circles, Career Learning Labs, and opportunities for networking and building authentic relationships with peers. Apply today! <b>Applications close November 20.</b></p>
-                    <p>To check eligibility and apply: <a href="https://accelerateherfuture.com/for-individuals/fellowship-circle/">https://accelerateherfuture.com/for-individuals/fellowship-circle/</a></p>
-                    <p style="margin-bottom:0;">Fellowship Circle Application Key Dates:</p>
-                    <ul>
-                        <li>Applications Close: November 20, 2023</li>
-                        <li>Successful Fellows Contacted by: Dec 22, 2023</li>
-                        <li>Fellowship Circle Winter Cohort will include a Career Readiness Bootcamp on January 20/21, 2024 and 10-weekly sessions every Thursday from January 25 - March 28, 2024, 7:00 - 9:00 pm EST.</li>
-                    </ul>
-                </div>
-                -->
-
-                <!--<button type="button" style="margin:10px;" class="collapsible">Women In Pharma Virtual Career Panel Discussion</button>
-                <div class="content">
-                    <p>Sanofi Canada is hosting their third of a three-part development workshop series for the Fall 2023 season, NA Sanofi Workshop Series: “Women In Pharma” virtual career panel discussion! The workshop will have topics that are particularly relevant to students. Additionally, we would welcome you to attend the session!</p>
-                    <p style="margin-bottom:0;"><b>About the Workshop:</b> The Sanofi “Women In Pharma” virtual career panel discussion on Wednesday, November 15th (5:00pm-6:30pm) is an opportunity for students to gain insight into the pharmaceutical industry and learn from accomplished women who are working in various roles within Sanofi. The amazing panelists will offer valuable perspectives on areas such as:</p>
-                    <ul>
-                        <li>Insight into the company culture.</li>
-                        <li>What it takes to be successful as a woman in the pharma industry.</li>
-                        <li>The challenges and opportunities women may encounter in the industry.</li>
-                        <li>Unique experiences and skills that contribute to a successful career path.</li>
-                        <li>Actionable advice for your own career journey.</li>
-                    </ul>
-                    <p>Be ready to be empowered and inspired!</p>
-                    <p><b>About Sanofi:</b> We are an innovative global healthcare company, driven by one purpose: we chase the miracles of science to improve people’s lives. Our teams across the world strive to transform the practice of medicine, turning the impossible into the possible for patients. We provide potentially life-changing treatments and the protection of life-saving vaccines to millions of people, and affordable access to our medicines in some of the world’s poorest countries.</p>
-                    <p><b>Event:</b> Sanofi NA Workshop: Women In Pharma”</p>
-                    <p><b>Date:</b> Wednesday, November 15th, 2023</p>
-                    <p><b>Time:</b> 5:00 - 6:30 PM EST</p>
-                    <p>You may complete the form through this link to access the registration link for the event: <a href="https://smrtr.io/gZ5wt">https://smrtr.io/gZ5wt</a></p>
-
-                </div>-->
 
                 <button type="button" style="margin:10px;" class="collapsible">Master’s and PhD Opportunities in Intelligent Systems and Control Theory at the University of Toronto</button>
                 <div class="content">
@@ -330,50 +283,6 @@
                     <p>If you are interested in undertaking a graduate degree in one of our research groups, we kindly ask that you follow the instructions posted <a href="https://www.ece.utoronto.ca/graduates/admission/">here</a> in order to submit your application. In your personal statement, please indicate the names of the professors whom you are most interested in working with. Please also indicate “Systems Control” as a research interest area in your ECE 
                         application. Applicants to the PhD program are expected to have prior research experience, and a typical PhD applicant will have (or will be working toward) a research-based Master’s degree. Note that the MASc and PhD degree programs are fully funded. We appreciate your consideration, and we hope to see your application.</p>
                 </div>
-
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">Wet Lab Spaces for Health Science Startups</button>
-                <div class="content">
-                    <p><b>November 14th | 2023 Pitch Perfect Competition</b></p>
-                    <p>Join <b>Health Innovation Hub (H2i)</b> and <b>MaRS</b> on <b>Wednesday November 22nd</b> for an in-person event exploring how early-stage health science startups are navigating their wet lab space needs. This panel and networking event will cultivate conversation between entrepreneurs and wet lab space providers—with a unique panel featuring speakers from startups, labs, academia, hospitals, real estate, advocacy coalitions and more. Learn what is currently available, gain insight into navigating existing challenges, and join the important conversation of how we can collaborate to continue growing a local, thriving wet-based venture community. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/">https://h2i.utoronto.ca/event/wet-lab-spaces-for-health-science-startups/</a></b></p>
-                </div>
-                -->
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">2023 Pitch Perfect Competition</button>
-                <div class="content">
-                    <p><b>November 22nd | Wet Lab Spaces for Health Science Startups</b></p>
-                    <p><b>Pitch Perfect</b> is a Temerty Faculty of Medicine and Health Innovation Hub (H2i) initiative to celebrate and support student entrepreneurs working on health focused innovations. The event will showcase 6 student-based ventures who will have just 5-minutes to capture their innovative concept as they pitch to a panel of expert judges. 3 of the teams will win a $5000 Student Innovation Fellowship to help develop their project further. Join us in-person on <b>November 14th</b> for networking and interaction with the community! Food and refreshments will be provided. <b>Learn more and register at: <a href="https://h2i.utoronto.ca/event/pitch-perfect-2023/">https://h2i.utoronto.ca/event/pitch-perfect-2023/</a></b></p>
-                </div>
-                -->
-                <!--
-                <button type="button" style="margin:10px;" class="collapsible">BMO In-Person Led Workshop - Let’s Solve Resume Mysteries</button>
-                <div class="content">
-                    <p>Career Exploration & Education (CxED), Student Life invites you to attend the employer led <b>in-person</b> workshop - <b>Bank of Montreal (BMO)</b> - <i>"Let's Solve Resume Mysteries: Building Effective Resumes & Navigating ATS"</i>.</p>
-                    <p style="margin-bottom:0;">You'll gain valuable insights, practical skills and knowledge needed to craft an effective and targeted resume that will capture the attention of employers and help you successfully navigate the intricacies of Applicant Tracking Systems (ATS). You will also learn and understand firsthand from a recruiter's perspective how to:</p>
-                    <ul>
-                        <li><b>Connect with experts:</b> Interact with <b>Bank of Montreal (BMO) recruiters</b> who will share insider tips and real workplace applications and insights.</li>
-                        <li><b>Craft an effective resume:</b> Learn how to tailor a resume by analysing a job posting and identifying and showcasing your skills, experience, and knowledge.</li>
-                        <li><b>Crack the ATS (Applicant Tracking System) code:</b> Discover strategies to crack the ATS systems, ensuring your resume gets noticed by recruiters and HR professionals.</li>
-                        <li><b>Empower your career:</b> Take control of your career journey and increase your chances of landing interviews and job offers.</li>
-                    </ul>
-
-                    <p><i>Register for the workshop (Tuesday, November 14th) and secure your spot! </i></p>
-                    <p><b>Date/Time:</b> Tuesday, November 14, 2023 at 1:30 PM (2 hours, including a break time)</p>
-                    <p><b>Location:</b>  Room 301 (Conference Room), Experiential Learning Commons (ELC) Building, 255 Beverley Street, Toronto, ON M5T 1Z4 *</p>
-                    <p><b>Target audience:</b> All U of T students and recent graduates 2 years </p>
-                    <p><b>Registration:</b> <a href="https://clnx.utoronto.ca/events.htm?evtId=59136">https://clnx.utoronto.ca/events.htm?evtId=59136</a></p>
-                    <p><b>Questions:</b>  If you have any questions or require any accommodation, please email Career Exploration & Education at <a href="mailto: events@careers.utoronto.ca">events@careers.utoronto.ca</a></p>
-                    <p>*The ELC Building is on the southeast corner of Beverley and College. The building entrance is on Beverley - 255 Beverley St. Take the elevator to the 3rd floor, turn right and walk to the end of the hall. Walk through the doors, turn right and you'll see the open conference room straight ahead.</p>
-                </div>
-                -->
-
-                <!-- <button type="button" class="collapsible">Performance Improvement Consultant (Full Time)</button>
-                <div class="content">
-                </div>
-
-                <button type="button" class="collapsible">Performance Improvement Consultant (CO-OP/Summer Internship)</button>
-                <div class="content">
-                </div> -->
 
 
                 <script>
@@ -392,7 +301,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: December 12, 2023</i></p>
+                <p class="align"><i>Last updated: January 4, 2024</i></p>
             </div>     
         </section>
 	</main>
