Update our team

--- a/our-team.html
+++ b/our-team.html
@@ -296,7 +296,7 @@
                         <!--<img src="img/team/Tiffanie Li 1.jpeg" class="img-fluid"
                         onmouseover="this.src='img/team/Tiffanie Li 2.jpeg';"
                         onmouseout="this.src='img/team/Tiffanie Li 1.jpeg';">-->
-                        <img src="img/team-2023/Serene Stoller.jpg" class="img-fluid">
+                        <img src="img/color1.jpg" class="img-fluid">
                         <div class="member-info">
                             <div class="member-info-content">
                                 <h4>Serene Stoller</h4>
