--- a/opportunities.html
+++ b/opportunities.html
@@ -160,15 +160,59 @@
                     </table>
                 </div> -->
                 
-                <button type="button" style="margin:10px;" class="collapsible">2024 FemSTEM Kickoff Event & Panel</button>
+                <button type="button" style="margin:10px;" class="collapsible">Transformative Experiential Learning Opportunity</button>
                 <div class="content">
-                    <p>Interested in hearing insights and lessons learned from three incredible women
-                        entrepreneurs creating change in health innovation?</p>
-                    <p>Register now for H2i’s 2024 FemSTEM Kickoff Event on January 11th,2024</p>
-                    <p>Hear from three remarkable founders about their experiences and join in on the conversation! The panel will feature three incredible entrepreneurs: <b>Firoza Kothari, Dr. Sumaiyah Rehman,</b> and <b>Vishar Yaghoubian.</b></p>
-                    <p><b>All are welcome to join: students, faculty, alumni, founders, aspiring innovators & members of the H2i community!</b></p>
-                    <p>Reserve your spot <a href="https://h2i.utoronto.ca/event/femstem-2024-kickoff-event-panel/">here!</a></p>
+                    <p>Join a global network of multidisciplinary students and faculty investigating complex challenges to accelerate the achievement of the United Nations’ Sustainable Development Goals.</p>
+                    <p>The Reach Alliance is a student-driven, faculty-mentored research and leadership initiative. Often described as a challenging, yet rewarding, experience, Reach teams conduct rigorous research and author a case study examining how critical interventions and innovations reach those who are hardly reached: the geographically remote, administratively invisible and marginalized.</p>
+
+                    <p style="margin-bottom:0;"><b>As a Reach Researcher you will:</b></p>
+                    <ul>
+                        <li>Develop leadership skills</li>
+                        <li>Work in interdisciplinary teams</li>
+                        <li>Gain hands-on experience in research design and analysis</li>
+                        <li>Carry out field research in a global context</li>
+                        <li>Work with faculty mentors, performance coaches, and industry professionals</li>
+                    </ul>
+                    <p>Application Deadline: 11:59 pm EST, February 11, 2024</p>
+                    <a href="https://d56nzt04.na1.hubspotlinksfree.com/Ctc/UD+113/d56NzT04/VWy3ML4R1NlwV5q_tC4bWcf7W5g6HvJ57dJ1vN89-Qzz3m2ndW69sMD-6lZ3kDW4qjnX11tSGjpW8ZBZ-v6Q7tvGW2kKVY11hDN0kW7N9b2Q3PQcVBN5Sk2mGy3gqXW82jhkk2X9jh2W99-B5r231XN2W6HWdbZ9hcX8XN5dvyP87YT5mW1XC-TC3Yd5YRW3qChxC60YPnQN4qb8YYzSvvJW6_S4Ts1_0t_8W8gHWGQ9g0rzkW7Nz5247k1ZZZW5-kwxC4jrmymW4GB_0V110cVxW7C7ZBm9b9ZLtW2xjyXf7kT3D1W6XNTBf7HPXrPf6wWpFW04"><b>Apply for the 2024-25 Cohort</b></a>
                 </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Global Learning Case Competition</button>
+                <div class="content">
+                    <p>We’re excited to invite you to participate in our fourth Global Learning Case Competition facilitated by the University of Toronto! The competition is held <b>February 20-22, 2024.</b> This year’s virtual GLCC is seeking students from around the world to help us address this year’s theme, Artificial Intelligence (AI) for Social Change.</p>
+                    <p>Students from all three campuses and across the world will work virtually in teams over two days to brainstorm and design innovative, equitable and accessible solutions to the challenges presented by AI. On day three, they will submit their concepts to a panel of judges. To help guide and motivate the participants we will have engaging guest speakers, structured support and <b>$5000</b> in prizes to be split among the winning teams. <a href="https://learningabroad.utoronto.ca/global-at-home/glcc/">You can read more about the event at the website linked here.</a></p>
+                    <p>This year's case theme is AI for Social Change. No matter your program of study or background, we welcome you to join as an individual, a pair or a complete team of four. Those who register as individuals or pairs will be matched up with students from other institutions to create teams.</p>
+                    <p>You can register to reserve your spot in the event by <b>February 5</b> at the link here: <a href="https://forms.office.com/r/kDqS4LjRGt">GLCC U of T Student Registration.</a></p>
+                </div>
+
+                <button type="button" style="margin:10px;" class="collapsible">Qualcomm Canada's 4, 12, 16 Month Co-op and Internship Roles</button>
+                <div class="content">
+                    <p>Applicants will be reviewed on a rolling-basis, and applicants will be contacted if there is mutual candidate interest.</p>
+                    <p style="margin-bottom:0;"><b>LIVE CANADA INTERNSHIP AND CO-OP ROLES:</b></p>
+                    <ul>
+                        <li>16 Months (Start Date: Summer/May 2024):</li>
+                        <ul>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695564625">https://careers.qualcomm.com/careers/job/446695564625</a></li>
+                        </ul>
+                        <li>12 or 16 Months (Start Date: Summer/May 2024):</li>
+                        <ul>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695529586">https://careers.qualcomm.com/careers/job/446695529586</a></li>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695399140">https://careers.qualcomm.com/careers/job/446695399140</a></li>
+                        </ul>
+                        <li>12 Months (Start Date: Summer/May 2024):</li>
+                        <ul>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695508176">https://careers.qualcomm.com/careers/job/446695508176</a></li>
+                        </ul>
+                        <li>4 Months (Start Date: Summer/May 2024 preference):</li>
+                        <ul>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695655341">https://careers.qualcomm.com/careers/job/446695655341</a></li>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695848042">https://careers.qualcomm.com/careers/job/446695848042</a></li>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695969489">https://careers.qualcomm.com/careers/job/446695969489</a></li>
+                            <li><a href="https://careers.qualcomm.com/careers/job/446695988366">https://careers.qualcomm.com/careers/job/446695988366</a></li>
+                        </ul>
+                    </ul>
+                </div>
+
 
                 <button type="button" style="margin:10px;" class="collapsible">University Consulting Group is recruiting student consultants for Winter 2024</button>
                 <div class="content">
@@ -301,7 +345,7 @@
                     }
                     </script>
                 
-                <p class="align"><i>Last updated: January 4, 2024</i></p>
+                <p class="align"><i>Last updated: January 16, 2024</i></p>
             </div>     
         </section>
 	</main>
