updating main contacts, events (01/28)

--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -159,12 +159,11 @@
                                 onmouseout="this.src='img/team-2022/Abeer Fatima 1.jpg';">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Abeer Fatima</h4>
+                                        <h4>Angitha Mriduraj</h4>
                                         <span>High School Mentorship Director</span>
-                                        <h5>Electrical Engineering</h5>
+                                        <h5>Cell and Molecular Biology and Immunology</h5>
                                         <div class="social">
                                             <a href="mailto:hs.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/abeer-fatima-" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
