--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -113,7 +113,7 @@
                 </div>
 
                 <div style= "margin: 0 space auto; text-align: center;" >
-                    <a href = "https://docs.google.com/forms/d/e/1FAIpQLSdA8b5sWqiciS9z73lwADvYhlL5VHqq_2Tj6JGz8xSnIWOniQ/viewform" id="apply-btn" style = "margin-bottom: 28px;">
+                    <a href = "ttps://forms.gle/Tod62RYwMuCEmU5WA" id="apply-btn" style = "margin-bottom: 28px;">
                     Apply Now as a Mentee!
                     </a>
                 </div>
@@ -142,15 +142,15 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/favicon.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2023/Diba Alam.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Jasmine Wu</h4>
+                                        <h4>Diba Alam</h4>
                                         <span>Industry Mentorship Director</span>
                                         <h5>Engineering Science</h5>
                                         <div class="social">
                                             <a href="mailto:industry.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/jasminewu3" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/diba-alam/" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -159,15 +159,15 @@
         
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2022/Esther Zhou.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2023/Diba Alam.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Esther Zhou</h4>
+                                        <h4>Samantha Hossain</h4>
                                         <span>Industry Mentorship Director</span>
                                         <h5>Engineering Science</h5>
                                         <div class="social">
                                             <a href="mailto:industry.mentorship@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/esther-zhou " target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/in/samantha-hossain-133234247/ " target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
