--- a/pd.html
+++ b/pd.html
@@ -134,17 +134,15 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2021/Armita Doost 1.jpg" class="img-fluid"
-                                onmouseover="this.src='img/team-2022/Armita Doost 2.jpg';"
-                                onmouseout="this.src='img/team-2021/Armita Doost 1.jpg';">
+                                <img src="img/team-2023/Sabrina Zhu.jpg" class="img-fluid">
                                 <div class="member-info">
                                     <div class="member-info-content">
-                                        <h4>Armita Khashayardoost</h4>
+                                        <h4>Sabrina Zhu</h4>
                                         <span>VP Professional Development</span>
-                                        <h5>Engineering Science</h5>
+                                        <h5>Laboratory Medicine and Pathobiology, Immunology</h5>
                                         <div class="social">
                                             <a href="mailto:vp.pd@wise.skule.ca"><i class="fa fa-envelope"></i></a>
-                                            <a href="https://www.linkedin.com/in/armitadoost/" target="_blank"><i class="fa fa-linkedin"></i></a>
+                                            <a href="http://www.linkedin.com/in/sabrinazhu21" target="_blank"><i class="fa fa-linkedin"></i></a>
                                         </div>
                                     </div>
                                 </div>
