website updates main contacts (01/29)

--- a/hs-outreach.html
+++ b/hs-outreach.html
@@ -115,7 +115,7 @@
 
                 <div style= "margin: 0 space auto; text-align: center;padding-top: 60px;" >
                     <a href = "https://docs.google.com/forms/d/e/1FAIpQLSfqWrHJcBT8HYXQJM1i89g_v7viPAJD0LN2zylT0G27fbeV3Q/viewform" id="apply-btn" style = "margin-bottom: 28px;">
-                    Apply to become an Outreach Ambassador for the 2022-2023 year!
+                    Apply to become an Outreach Ambassador for the 2023-2024 year!
                     </a>
                 </div>
 
@@ -154,9 +154,7 @@
                     <div class="row justify-content-md-center">
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2022/Abeer Fatima 1.jpg" class="img-fluid"
-                                onmouseover="this.src='img/team-2022/Abeer Fatima 2.jpg';"
-                                onmouseout="this.src='img/team-2022/Abeer Fatima 1.jpg';">
+                                <img src="img/color1.jpg" class="img-fluid">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Angitha Mriduraj</h4>
