--- a/industry-mentorship.html
+++ b/industry-mentorship.html
@@ -159,7 +159,7 @@
         
                         <div class="col-lg-3 col-md-5 wow fadeInUp">
                             <div class="member">
-                                <img src="img/team-2023/Diba Alam.jpg" class="img-fluid" alt="">
+                                <img src="img/team-2023/Samantha Hossain.jpg" class="img-fluid" alt="">
                                 <div class="member-info">
                                     <div class="member-info-content">
                                         <h4>Samantha Hossain</h4>
