--- a/pd.html
+++ b/pd.html
@@ -136,7 +136,7 @@
                             <div class="member">
                                 <img src="img/team-2023/Sabrina Zhu.jpg" class="img-fluid">
                                 <div class="member-info">
-                                    <div class="member-info-content">
+                                    <div class="member-info-content-long">
                                         <h4>Sabrina Zhu</h4>
                                         <span>VP Professional Development</span>
                                         <h5>Laboratory Medicine and Pathobiology, Immunology</h5>
